<resources>
    <string name="app_name">TextToSpeech</string>
    <string name="menu_more">More</string>
    <string name="menu_share">Share</string>
    <string name="menu_like_by_star">Like by Star</string>
    <string name="menu_setting">Setting</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_import">Import</string>
    <string name="title_back">Back</string>
    <string name="title_play">Play</string>
    <string name="title_next">Next</string>
    <string name="title_export">Export</string>
    <string name="title_stop">Stop</string>
    <string name="hint_text">COPY - PASTE, IMPORT .DOC .TXT .PDF || SEND LINK FROM WEB</string>
    <string name="text_setting">Say what you type, you past, import 12 language with male, femaile. It have funy effect.</string>

    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>

    <string-array name="array_sex">
        <item>ALEX</item>
        <item>TOM</item>
        <item>MARY</item>
    </string-array>
</resources>
