<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.AlanAIVoiceLAB.voicegeneratorfunnytexttospeech.pdfspeaker.com.AlanAIVoiceLAB.voicegeneratorfunnytexttospeech.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="?homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:layout_margin="5dp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edtInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:layout_margin="5dp"
        android:hint="@string/hint_text"
        android:visibility="gone" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/buttons"
        android:background="#d1d1d1" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnImport"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_export_black_24dp"
            android:text="@string/title_import"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_back_black_24dp"
            android:text="@string/title_back"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_play_black_24dp"
            android:text="@string/title_play"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_stop_black_24dp"
            android:text="@string/title_stop"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_next_black_24dp"
            android:text="@string/title_next"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnExport"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_export_black_24dp"
            android:text="@string/title_export"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>
